clusters/KC-Int/deployments/databases/pgadmin/app/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: pgadmin
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:TAJiJwy8OvJImQFW/nehXjvfOtmkvHf1Baqx,iv:jjMewWyLdCUW8tFYjBVKUQn8Jjk5rH9zaSCEiVcCAGM=,tag:aNnCgvcEKnDXPRdthpzLTA==,type:str]
          kind: Rule
          services:
            - name: pgadmin
              port: 80
    tls:
        secretName: production-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4dFFsRUZYZU00cVAvSjMz
[...]
            YwiXLg5lJ3IyCEHeDUC1Wr/2jhKcAztdi6toCeRz+G6It5Y8u9/hWw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-09T16:11:41Z"
    mac: ENC[AES256_GCM,data:uuJdTgmo5Orz4vr0GHE1dXb4Q4FDB0/EsjqO35T38SjplOhkk7Fs93bXcywDqHMpwKtOU3/tRl32iAEFJ366cU5xAuOtnrjBJpVIygfAg1fPkdCYo5tPBZNW66PPMEHHrBGEW+cpQDxcv9Ltm2dUCv0nWV0zlK4/6sF6DCKg0Fk=,iv:V+Ii7r3uyW/yPTGpswi5v5vDDhjSbqAdNqTczykhBa8=,tag:QgIXY4Ps2p0aStNv0qwmzg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|externalName)$
    version: 3.8.1
